<resources>
    <string name="app_name">Fast Air</string>
    <string name="app_description">Experience the high speed transfers</string>

    <string name="wait_for_transport_file">Pending transfers list</string>
    <string name="transfer_service">Transfer service</string>
    <string name="file_transfer">File transfer</string>
    <string name="discover_device">Device connection</string>
    <string name="disconnect_device">Disconnect</string>
    <string name="local_host">Local Host</string>
    <string name="transfer_history">Transfers history</string>
    <string name="chat">Chat</string>
    <string name="donate">Donation</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="choose_save_path">Choose saving directory</string>
    <string name="delete_file_list">List of files to be deleted</string>

    <string name="trans_waiting">Waiting for transfers</string>
    <string name="scan_ing">Looking for nearby devices, please wait&#8230;</string>
    <string name="scan_failed">Scan completed, nothing found, please confirm and try again</string>
    <string name="init_failed">Launching failed, try again later</string>
    <string name="error_occur">Error</string>
    <string name="disabled_wifi_p2p">The current device is not using Wifi Direct or does not support it, please confirm and try again</string>
    <string name="tips_ok">Ok</string>
    <string name="copy_success">Content successfully copied to the clipboard</string>
    <string name="send_Illegal">Can\'t send spaces or blank lines</string>
    <string name="send_failed">Message delivery failed</string>
    <string name="transfer_failed">File transfer failed</string>
    <string name="transfer_success">File transfer success</string>
    <string name="remove_group_error">An error occurred in the group removal</string>
    <string name="connect_success">Congrats, the connection was established!</string>
    <string name="auto_connect_success">Recently connected device was automatically connected!</string>
    <string name="failed_to_open">Failed to open, no suitable app was found to handle this file</string>
    <string name="p2p_unsupport_error">Sorry, this device does not support P2P Wi-Fi services or it is not available at the moment!</string>
    <string name="p2p_busy_error">The device is processing the request, please wait</string>
    <string name="p2p_inner_error">Service is temporarily unavailable, restarting&#8230;</string>
    <string name="need_location">The App requires location permission to discover available nearby devices. This is only used for device discovery.</string>
    <string name="rejected_location">You have denied location permission, it might prevent discovering devices or being discovered.</string>
    <string name="knowIt">Ok</string>
    <string name="wram_tips">Hint</string>
    <string name="no_application_find">No suitable app was found to open the file</string>
    <string name="no_permission_to_scan">The permission is required in order to scan the device for the file information, please allow it in order to use it, this will not capture any of your sensitive private information!</string>
    <string name="choose_download_path">Choose download directory</string>
    <string name="select_nothing">No files selected yet, not sure what to delete</string>
    <string name="discover_error">Either Wi-Fi is turned off or the device does not support connections via Wi-Fi Direct</string>
    <string name="disconnected">Connection failed</string>
    <string name="disconnect_info">The device is connected, if you disconnect, you will need to reconnect again to be able to transfer files and chat</string>
    <string name="discover_help">1. App needs to connect to the nearly devices in order to work. Please make sure the device you want to connect to has the App opened and running \n2. When the phone icon and name appear in the App, click it in order to complete the pairing \n3 If you need to close the connection, click the disconnect button in the menu on the home screen</string>
    <string name="detect_unfinished_task">You have some unsent files, do you want to start sending them again?</string>
    <string name="path_setting_success">The default directory was successfully modified and the newly received files will be saved there: %s</string>
    <string name="storage_not_ready">Device storage is not ready</string>
    <string name="server_runing">The local host is running</string>
    <string name="server_stoped">The local host has stopped</string>
    <string name="current_device_info">Current device name = %1$s,status = %2$s</string>
    <string name="notification_was_denied">Notifications are rejected and no transfer status is visible on the notification drawer</string>

    <string name="copy_content">Copy to clipboard</string>
    <string name="turn_on">Turn on</string>
    <string name="retry">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading&#8230;</string>
    <string name="toggle_open">open</string>
    <string name="toggle_close">close</string>
    <string name="aes">Ascending</string>
    <string name="des">Descending</string>
    <string name="swap">Swap</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="sort">Sort by</string>
    <string name="delete">Delete</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_size">By size</string>
    <string name="sort_by_time">By time</string>
    <string name="warm">Warning</string>
    <string name="give_up">Abandon</string>
    <string name="send">Send</string>
    <string name="disconnect">Disconnect</string>
    <string name="just_kid">Oh, wait</string>
    <string name="device_connect">Connecting to the device</string>
    <string name="device_disconnect">Disconnecting</string>
    <string name="reconnect">Reconnect</string>
    <string name="exit">Exit</string>
    <string name="disconnect_now">Disconnect</string>
    <string name="later">Later</string>
    <string name="file_operation">Files activity</string>
    <string name="choose">Choose</string>
    <string name="start_server">Start server</string>
    <string name="stop_server">Stop server</string>
    <string name="restart_server">Restart server</string>

    <string name="category_picture">Pictures</string>
    <string name="category_other">Other</string>
    <string name="category_application">Apps</string>
    <string name="category_zip">Compressed files</string>
    <string name="category_txt">Text</string>
    <string name="category_pdf">PDF</string>
    <string name="category_powerpoint">PowerPoint</string>
    <string name="category_excel">Excel</string>
    <string name="category_word">Word</string>
    <string name="category_music">Music</string>
    <string name="category_video">Video</string>
    <string name="home_dir">Main</string>
    <string name="file_detail">File details</string>
    <string name="file_rename">Rename</string>
    <string name="file_size">Size</string>
    <string name="file_type">Type</string>
    <string name="file_date">Date</string>
    <string name="file_path">Directory</string>

    <string name="pref_default_clear_title">Automatic removal</string>
    <string name="pref_default_clear_des">After exiting the App, clear the completed tasks to avoid inadequate interaction between the files</string>
    <string name="pref_default_rewrite_title">Overwrite files</string>
    <string name="pref_default_rewrite_des">If you receive a file with the same name as the one already on your device, it will be replaced on the receiving device.</string>
    <string name="pref_default_download">Files default directory</string>

    <string name="device_status_available">Available</string>
    <string name="device_status_connected">Connected</string>
    <string name="device_status_failed">Failed</string>
    <string name="device_status_invaited">Invited</string>
    <string name="device_status_unavailable">unavailable</string>

    <string name="key_default_clear" translatable="false">autoclear</string>
    <string name="key_default_rewrite" translatable="false">rewrite</string>
    <string name="key_default_download" translatable="false">download</string>

    <string name="alipay" translatable="false">支付宝</string>
    <string name="wechat" translatable="false">微信支付</string>

    <string name="dropbehavior" translatable="false">com.mob.lee.fastair.view.TranslationBehavior</string>
</resources>